--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
 }
+
 html,body{
     width: 100%;
     height: 100%;
@@ -12,7 +13,9 @@ html,body{
 }
 
 
+
 nav {
+    position: absolute;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -121,16 +124,17 @@ nav {
  
   .ad {
     width: 100%;
-    height: 70vh;
+    height: 50%;
     padding:20px;
     background: rgb(97, 88, 88);
     text-align: center;
     font-size: 22px;
     font-weight: 700;
-   
+    
   }
 
   img {
+    width: 50%;
     padding: 0;
     display: block;
     margin: 0 auto;
@@ -237,10 +241,11 @@ img:hover{
 
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:600px) {
     body {
         overflow-x: hidden;
     }
+    
     .nav-links {
         position: absolute;
         right: 0px;
@@ -281,6 +286,10 @@ img:hover{
     }
     img{
         padding-bottom: 10px;
+        width: 100%;
+    }
+    img:hover{
+        border: 10px solid antiquewhite;
     }
 }
 
